<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HR App</string>
    <string name="name_field">Name</string>
    <string name="service_field">Service</string>
    <string name="mail_field">E-mail</string>
    <string name="password_field">Password</string>
    <string name="add_button">Add</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="beginning_absence_field">Start of absence (dd.mm.yyyy)</string>
    <string name="end_absence_field">End of absence (dd.mm.yyyy)</string>
    <string name="to_field">to</string>
    <string name="send_request_button">Send request</string>
    <string name="pref_about_text">This Application is created by Nicolas Constantin and Diogo D Almeida, 2 students of the HES-SO in IT section. This app allows the management of absences for a compagny.
        With this app, you can add delete or modify some absences or collaborator if you are an HR staff, and you can submit absences or see your absences if you are not an HR staff.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_collaborators">Collaborators</string>
    <string name="title_activity_accept_absences">Accept absences</string>
    <string name="title_activity_my_absences">My absences</string>
    <string name="title_activity_request_absences">Request absences</string>
    <string name="app_title">HR Diogo - Nicolas</string>
    <string name="disclaimer">HES-SO Sierre IT Section</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_msg">Do you really want to logout ?</string>
    <string name="action_cancel">Cancel</string>
    <string name="empty_field">Field empty !</string>
    <string name="invalid_mail">Invalid Email</string>
    <string name="invalid_account">Invalid account</string>
    <string name="error_password">This password is too short (min. 5 characters)</string>
    <string name="error_used_email">Email already in use</string>
    <string name="collaborator_created">Collaborator successfully created</string>
    <string name="absence_updated">Absence updated</string>
    <string name="error">An error has occurred</string>
    <string name="absence_deleted">Absence deleted</string>
    <string name="absence_refused">Absence refused</string>
    <string name="absence_accepted">Absence accepted</string>
    <string name="date_not_valid">Please, enter a valid date</string>
    <string name="date_error_time">Put a date after the Start of absence</string>
    <string name="collaborator_updated">Collaborator updated</string>
    <string name="collaborator_deleted">Collaborator deleted</string>
    <string name="settings">Settings</string>
    <string name="order_by_service">Order by service</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="order_summary">Order the Collaborator by service</string>
    <string name="about">About</string>
    <string name="pref_title">Information</string>
    <string name="pref_deco_text">To apply this setting, you will be logged out.</string>
    <string name="register">Login</string>
    <string name="login_empty">Login is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="wrong_password">Password incorrect</string>
    <string name="no_login">Non-existent login</string>
    <string name="created_request">Request created</string>
    <string name="newcollabo">New collaborator !</string>
    <string name="hello">Say hello to</string>
    <string name="from">from</string>
    <string name="choose_button">Choose file</string>
    <string name="file_name">enter file name</string>
    <string name="upload">upload</string>
    <string name="show_upload">Show uploads</string>


    <string-array name="cause_of_absence">
        <item>Sickness</item>
        <item>Vacation</item>
        <item>Accident</item>
        <item>Army</item>
        <item>Maternity</item>
        <item>Paternity</item>
        <item>Other</item>
    </string-array>

    <string-array name="lang_entries">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string-array name="language">
        <item>en</item>
        <item>fr</item>
    </string-array>
</resources>
