<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request_absences"
            android:icon="@drawable/ic_add_24dp"
            android:title="@string/title_activity_request_absences" />
        <item
            android:id="@+id/nav_my_absences"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_activity_my_absences" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_activity_chat" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/action_logout"/>
        <item
            android:id="@+id/nav_none"
            android:title=""
            android:visible="false"/>
    </group>

</menu>